meta-benchmarks/local-instanceserver-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: local-instanceserver
  namespace: default
spec:
  selector:
    agones.dev/role: gameserver
  ports:
    - name: game
      port: 3031
      targetPort: 3031
  type: NodePort
